# rules_gradle

./: .bazelproject  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  maven_install.json  package.json  pnpm-lock.yaml
.github/: CONTRIBUTING.md
.github/workflows/: check.buildifier.yml  check.lint-yaml.yml  check.scorecards.yml  deploy.docs.yml  module.build.yml  on.pr.yml  on.push.yml  on.release.yml  release_prep.sh
e2e/project/: BUILD.bazel
gradle/: defs.bzl
gradle/wrapper/: gradle-wrapper.properties
internal/: config.bzl  task.bzl  task2.bzl
java/: BUILD.bazel  logback.xml
tools/bazel/: base.bazelrc  bazel6.bazelrc  buildbuddy.bazelrc  ci.bazelrc  java.bazelrc  macos.bazelrc  remote.bazelrc
tools/defs/java/: deps.bzl
tools/defs/kt/: BUILD.bazel
