"Gradle Rules for Bazel"

module(
    name = "rules_gradle",
    version = "0.0.1",
)

GRADLE_VERSION = "8.2.1"

GO_VERSION = "1.20.6"

##
## Dependencies: API
##

bazel_dep(
    name = "platforms",
    version = "0.0.7",
)
bazel_dep(
    name = "bazel_features",
    version = "1.0.0",
)
bazel_dep(
    name = "rules_java",
    version = "6.4.0",
)
bazel_dep(
    name = "bazel_skylib",
    version = "1.4.2",
)
bazel_dep(
    name = "apple_support",
    version = "1.8.1",
    repo_name = "build_bazel_apple_support",
)

##
## Dependencies: Development
##

# bazel_dep(
#     name = "rules_license",
#     version = "0.0.7",
#     dev_dependency = True,
# )
# bazel_dep(
#     name = "rules_cc",
#     version = "0.0.8",
#     dev_dependency = True,
# )
# bazel_dep(
#     name = "rules_python",
#     version = "0.25.0",
#     dev_dependency = True,
# )
# bazel_dep(
#     name = "rules_testing",
#     version = "0.4.0",
#     dev_dependency = True,
# )
# bazel_dep(
#     name = "aspect_bazel_lib",
#     version = "1.34.1",
#     dev_dependency = True,
# )
# bazel_dep(
#     name = "aspect_rules_js",
#     version = "1.32.1",
#     dev_dependency = True,
# )
# bazel_dep(
#     name = "rules_nodejs",
#     version = "6.0.1",
#     dev_dependency = True,
# )
# bazel_dep(
#     name = "rules_go",
#     version = "0.41.0",
#     dev_dependency = True,
#     repo_name = "io_bazel_rules_go",
# )
# bazel_dep(
#     name = "gazelle",
#     version = "0.32.0",
#     dev_dependency = True,
#     repo_name = "bazel_gazelle",
# )
# bazel_dep(
#     name = "rules_jvm_external",
#     version = "5.3",
#     dev_dependency = True,
# )
# bazel_dep(
#     name = "stardoc",
#     version = "0.6.2",
#     dev_dependency = True,
#     repo_name = "io_bazel_stardoc",
# )
# bazel_dep(
#     name = "bazel_skylib_gazelle_plugin",
#     version = "1.4.2",
#     dev_dependency = True,
# )
# bazel_dep(
#     name = "contrib_rules_jvm",
#     version = "0.18.0",
#     dev_dependency = True,
# )
# bazel_dep(
#     name = "buildifier_prebuilt",
#     version = "6.3.3",
#     dev_dependency = True,
# )


# ################################################################################
# # rules_cc
# ################################################################################

# cc_configure = use_extension(
#     "@rules_cc//cc:extensions.bzl",
#     "cc_configure",
#     dev_dependency = True,
# )

# use_repo(cc_configure, "local_config_cc_toolchains")

# register_toolchains(
#     "@local_config_cc_toolchains//:all",
#     dev_dependency = True,
# )

# ################################################################################
# # rules_jvm_external
# ################################################################################

# maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

# maven.artifact(
#     artifact = "gradle-tooling-api",
#     group = "org.gradle",
#     version = GRADLE_VERSION,
# )

# maven.install(
#     name = "maven",
#     repositories = [
#         "https://maven.pkg.st",
#         "https://gradle.pkg.st",
#         "https://repo.gradle.org/gradle/libs-releases",
#     ],
#     generate_compat_repositories = False,
# )

# use_repo(
#     maven,
#     "maven",
#     "maven_unpinned",
# )

# ################################################################################
# # rules_js
# ################################################################################

# npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)

# npm.npm_translate_lock(
#     name = "npm",
#     pnpm_lock = "//:pnpm-lock.yaml",
#     npmrc = "//:.npmrc",
# )

# use_repo(npm, "npm")

# ################################################################################
# # rules_go
# ################################################################################

# go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")

# # Download an SDK for the host OS & architecture.
# go_sdk.download(
#     version = GO_VERSION,
# )
