load(
    "@rules_kotlin//kotlin:jvm.bzl",
    "kt_jvm_library",
)
load(
    "@rules_java//java:defs.bzl",
    "java_binary",
    "java_library",
)
load(
    "@rules_graalvm//graalvm:defs.bzl",
    "native_image",
)
load(
    "//tools/defs/java:deps.bzl",
    "maven",
)

DEPS = [
    maven("ch.qos.logback:logback-core"),
    maven("ch.qos.logback:logback-classic"),
    maven("com.google.guava:guava"),
    maven("info.picocli:picocli"),
    maven("org.gradle:gradle-tooling-api"),
    maven("org.slf4j:slf4j-api"),
    maven("org.slf4j:jul-to-slf4j"),
    maven("org.jetbrains.kotlin:kotlin-stdlib"),
]

filegroup(
    name = "srcs-java",
    srcs = glob([
        "build/bazel/**/*.java",
    ]),
)

filegroup(
    name = "srcs-kt",
    srcs = glob([
        "build/bazel/**/*.kt",
    ]),
)

kt_jvm_library(
    name = "lib-kt",
    srcs = [":srcs-kt"],
    deps = DEPS,
)

java_library(
    name = "lib-java",
    srcs = [":srcs-java"],
    deps = DEPS + [":lib-kt"],
)

java_binary(
    name = "runner",
    main_class = "build.bazel.gradle.GradleRunner",
    visibility = ["//visibility:public"],
    runtime_deps = [":lib-java"],
)

java_binary(
    name = "wrapper",
    classpath_resources = [":logback.xml"],
    main_class = "build.bazel.gradle.GradleW",
    visibility = ["//visibility:public"],
    runtime_deps = [":lib-java"] + DEPS,
)

native_image(
    name = "native",
    main_class = "build.bazel.gradle.GradleRunner",
    visibility = ["//visibility:public"],
    deps = [":lib-java"],
)

alias(
    name = "java",
    actual = "runner",
    visibility = ["//visibility:public"],
)
