load(
    "//gradle:defs.bzl",
    "gradle_task",
)

# gazelle:exclude src/*

filegroup(
    name = "files",
    srcs = [
        "build.gradle.kts",
        "settings.gradle.kts",
        "src/main/java/HelloWorld.java",
    ],
)

gradle_task(
    name = "project",
    outputs = [
        "libs/sample-project.jar",
    ],
    project = ":files",
)
